# ML_AccountingFraud

./: .gitignore  11 vs 28.xlsx  Collinearity_Test_Logit.ipynb  FK23_kfold.ipynb  MLFraud_module.py  README.md  RUS28_kfold.ipynb  SerialStats.csv  Step4_Compare_Ada.py  Step5_Compare_Ada.py  Step5_foreward_precision.py  SumStats.csv  VIF_11ratio.csv  VIF_23raw.csv  VIF_28raw.csv  check_random_forest.py  environment.yml  extra_codes.py  pyproject.toml  requirements.txt  rusboost.py  sample_script.py  step0_SumStat.py  step0_concat.py  step1_SumStat.py  step2_script_11ratios.py  step2_script_rusboost.py  step3_script_rusboost.py  step3_script_rusboost_28raw.py  step4_script_svm_fk.py  step4_script_svm_fk_23raw.py  step5_Compare_Ada.py  step6_foreward_precision.py
.ipynb_checkpoints/: 6ratios_kfold-checkpoint.ipynb
MLFraud_module/: __init__.py  extra_codes.py
